changed player fighter options from class to id and altered computer fighters classes as well

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <section class="battleground">
             <section class="playerInterface">
                 <h2>Player</h2>
-                <section class="warrior"></section>
-                <section class="mage"></section>
-                <section class="archer"></section>
+                <section id="warrior"></section>
+                <section id="mage"></section>
+                <section id="archer"></section>
             </section>
             
             <section class="computerInterface">
                 <h2>Computer</h2>
-                <section class="warrior"></section>
-                <section class="mage"></section>
-                <section class="archer"></section>
+                <section id="npc_warrior"></section>
+                <section id="npc_mage"></section>
+                <section id="npc_archer"></section>
             </section>
         </section>
     </main>
