focusing on playing the game with user input through prompt, will work on DOM interaction after i can finish a game session. function playerChoice finished for current restraints'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="battleground">
             <section class="playerInterface">
                 <h2>Player</h2>
-                <section id="warrior"></section>
+                <section id="warrior" value="warrior"></section>
                 <section id="mage"></section>
                 <section id="archer"></section>
             </section>
