playing with markdown

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<section class="playerInterface">
 				<h2>Player</h2>
 				<section id="warrior" value="warrior"></section>
-				<section id="mage"></section>
-				<section id="archer"></section>
+				<section id="mage" value="mage"></section>
+				<section id="archer" value="archer"></section>
 			</section>
 
 			<section class="computerInterface">
