finished the logic for round winners with UI. Need to initiate game to get things rolling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Warrior, Mage, & Archer</title>
+	<title>DEATH BATTLE</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -15,16 +15,16 @@
 		<section class="battleground">
 			<section class="playerInterface">
 				<h2>Player</h2>
-				<section id="warrior" value="warrior"></section>
-				<section id="mage" value="mage"></section>
-				<section id="archer" value="archer"></section>
+				<button id="rock" value="rock"></button>
+				<button id="paper" value="paper"></button>
+				<button id="scissor" value="scissor"></button>
 			</section>
 
 			<section class="computerInterface">
 				<h2>Computer</h2>
-				<section id="npc_warrior"></section>
-				<section id="npc_mage"></section>
-				<section id="npc_archer"></section>
+				<button id="npc_rock"></button>
+				<button id="npc_paper"></button>
+				<button id="npc_scissor"></button>
 			</section>
 		</section>
 	</main>
