finished functional UI along with the game. need polish with pictures a bit more love

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+<!-- 	<section class="startGame">
+		<button>PLAY GAME</button>
+	</section> -->
+
 	<main>
 		<h1>BATTLE TO THE DEATH! SELECT YOUR FIGHTERS TO DETERMINE THE VICTOR OF THE WAR!</h1>
 		<section class="battleground">
@@ -27,17 +31,18 @@
 				<button id="npc_scissor"></button>
 			</section>
 		</section>
+
+		<section class="scoreboard">
+			<h2 class="playerScoreboard">0</h2>
+			<h2>-</h2>
+			<h2 class="computerScoreboard">0</h2>
+		</section>
+	
+		<section class="roundResult">
+			<p>WHO SHALL BE THE VICTOR?!</p>
+		</section>
 	</main>
-
-	<section class="scoreboard">
-		<h2 class="playerScoreboard">0</h2>
-		<h2>-</h2>
-		<h2 class="computerScoreboard">0</h2>
-	</section>
-
-	<section class="roundResult">
-		<p>WHO SHALL BE THE VICTOR?!</p>
-	</section>
+	
 
 	<script src="./main.js"></script>
 </body>
