--- a/index.html
+++ b/index.html
@@ -15,32 +15,44 @@
 	</section> -->
 
 	<main>
-		<h1>BATTLE TO THE DEATH! SELECT YOUR FIGHTERS TO DETERMINE THE VICTOR OF THE WAR!</h1>
+		<h1>BATTLE TO THE DEATH!</h1> 
+		<h2>SELECT YOUR FIGHTERS TO DETERMINE THE VICTOR OF THE WAR!</h2>
 		<section class="battleground">
 			<section class="playerInterface">
-				<h2>Player</h2>
-				<button id="rock" value="rock"></button>
-				<button id="paper" value="paper"></button>
-				<button id="scissor" value="scissor"></button>
+				<section class="attackBar">
+					<h2>Player</h2>
+					<button id="rock" value="rock"></button>
+					<button id="paper" value="paper"></button>
+					<button id="scissor" value="scissor"></button>
+				</section>
+				<section class="fighter1"></section>
 			</section>
 
 			<section class="computerInterface">
-				<h2>Computer</h2>
-				<button id="npc_rock"></button>
-				<button id="npc_paper"></button>
-				<button id="npc_scissor"></button>
+				<section class="fighter2"></section>
+
+				<section class="attackBar">
+					<h2>Computer</h2>
+					<button id="npc_rock"></button>
+					<button id="npc_paper"></button>
+					<button id="npc_scissor"></button>
+				</section>
 			</section>
+
 		</section>
 
-		<section class="scoreboard">
-			<h2 class="playerScoreboard">0</h2>
-			<h2>-</h2>
-			<h2 class="computerScoreboard">0</h2>
+		<section class="output">
+			<section class="scoreboard">
+				<h2 class="playerScoreboard">0</h2>
+				<h2>-</h2>
+				<h2 class="computerScoreboard">0</h2>
+			</section>
+		
+			<section class="roundResult">
+				<p>WHO SHALL BE THE VICTOR?!</p>
+			</section>
 		</section>
-	
-		<section class="roundResult">
-			<p>WHO SHALL BE THE VICTOR?!</p>
-		</section>
+		
 	</main>
 	
 
