finished adding response to fighter chosen per round.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<section class="playerInterface">
 				<section class="attackBar">
 					<h2>Player</h2>
-					<button id="rock" value="rock"></button>
-					<button id="paper" value="paper"></button>
-					<button id="scissor" value="scissor"></button>
+					<button class="rock" value="rock"></button>
+					<button class="paper" value="paper"></button>
+					<button class="scissor" value="scissor"></button>
 				</section>
 				<section class="fighter1"></section>
 			</section>
@@ -33,9 +33,9 @@
 
 				<section class="attackBar">
 					<h2>Computer</h2>
-					<button id="npc_rock"></button>
-					<button id="npc_paper"></button>
-					<button id="npc_scissor"></button>
+					<button class="npc_rock"></button>
+					<button class="npc_paper"></button>
+					<button class="npc_scissor"></button>
 				</section>
 			</section>
 
