--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DEATH BATTLE</title>
 	<link rel="stylesheet" href="./css/style.css">
+	<script src="./main.js" async defer></script>
 </head>
 
 <body>
@@ -51,8 +52,6 @@
 		
 	</main>
 	
-
-	<script src="./main.js"></script>
 </body>
 
 </html>
