got chosen fighters to flex in a row

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
         <!-- battleground -->
         <section class="battleground">
-          <!-- chosen fighters -->
-          <section class="fighter1"></section>
-          <section class="fighter2"></section>
+					<section class="selectedFighter">
+						<section class="fighter1"></section>
+						<section class="fighter2"></section>
+					</section>
 
           <section class="output">
             <section class="scoreboard">
