let user know that the first to 5 wins within html with added bold and emphasis

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </section>
 
             <section class="roundResult">
-              <p>WHO SHALL BE THE VICTOR?!</p>
+              <p>WHO SHALL BE THE VICTOR?! First to <em><strong>5</strong></em> wins.</p>
             </section>
           </section>
         </section>
