added border to the intro header. need to fix broken images of selected fighters

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <body>
     <main>
-      <section>
+      <section class="intro">
         <h1>BATTLE TO THE DEATH!</h1>
-        <h2>SELECT YOUR FIGHTERS TO DETERMINE THE VICTOR OF THE WAR!</h2>
+        <h4>SELECT YOUR FIGHTERS TO DETERMINE THE VICTOR OF THE WAR!</h4>
       </section>
 
       <section class="battle">
