rearranged how new game is initiated with a start over button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
               <p>WHO SHALL BE THE VICTOR?! First to <em><strong>5</strong></em> wins.</p>
             </section>
           </section>
+
+          <section class="restart">
+            <button class="reset">Start Over</button>
+          </section>
         </section>
 
         <!-- fighter 2 -->
